--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "app_name": "Sistema de Gestão Minimalista",
+    "app_name": "Sistema de Gestão",
     "version": "1.0.0",
     "theme": "dark",
     "debug": true,
